signature photo margin only right

--- a/signature.html
+++ b/signature.html
@@ -1,6 +1,6 @@
 <table><tbody>
   <tr>
-    <td valign="top">{RT}<span style="padding: 25px">{Photo 2}</span>{/RT}</td>
+    <td valign="top">{RT}<span>{Photo 2}</span>&nbsp;&nbsp;&nbsp;{/RT}</td>
     <td valign="top" style="width: 349.7pt;">
       <div style="color: rgb(4, 41, 64);">
         <p>
