--- a/enrico.html
+++ b/enrico.html
@@ -1,4 +1,4 @@
-        <p style="margin: 10pt 0; font-size: 9pt;">
+        <p style="margin: 10pt 0; font-size: 9pt; font-family: Arial; line-height: 12pt;">
           <b>Executive&nbsp;Assistant</b>
           <br>
           Miriam&nbsp;Albert
