exclude the whole <td /> if no photo

--- a/signature.html
+++ b/signature.html
@@ -1,6 +1,6 @@
 <table><tbody>
   <tr>
-    <td valign="top">{RT}<span>{Photo 2}</span>&nbsp;&nbsp;&nbsp;{/RT}</td>
+    {RT}<td valign="top"><span>{Photo 2}</span>&nbsp;&nbsp;&nbsp;</td>{/RT}
     <td valign="top" style="width: 349.7pt;">
       <div style="color: rgb(4, 41, 64);">
         <p style="font-size: 11pt; font-family: Arial;">
