--- a/signature.html
+++ b/signature.html
@@ -1,6 +1,6 @@
 <table><tbody>
   <tr>
-    {RT}<td valign="top" style="margin: 0 20px"><span>{Photo 2}</span></td>{/RT}
+    <td valign="top">{RT}<span style="margin: 0 20px 0 0">{Photo 4}</span>{/RT}</td>
     <td valign="top" style="width: 466px;">
       <div style="color: rgb(4, 41, 64);">
         <p style="font-size: 14px; font-family: Arial;">
