fix missing /td

--- a/signature.html
+++ b/signature.html
@@ -1,6 +1,6 @@
 <table style="border: 0; margin: 0;"><tbody>
   <tr style="border: 0; margin: 0;">
-    <td valign="top" style="border: 0; margin: 0;">{RT}<table style="margin: 0; border: 0"><tbody><tr><td valign="top" style="border: 0; margin: 0;">{Photo 4}</td><td style="border: 0; margin: 0; width: 30px" /></tr></tbody></table>{/RT}</td>
+    <td valign="top" style="border: 0; margin: 0;">{RT}<table style="margin: 0; border: 0"><tbody><tr><td valign="top" style="border: 0; margin: 0;">{Photo 4}</td><td style="border: 0; margin: 0; width: 30px" /></td></tr></tbody></table>{/RT}</td>
     <td valign="top" style="border: 0; margin: 0; width: 466px;">
       <table style="border: 0; margin: 0; color: rgb(4, 41, 64);"><tbody>
         <tr><td style="border: 0; margin: 0; font-size: 14px; font-family: Arial; line-height: 18px; mso-line-height-rule:exactly;">
